# interlib

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  Makefile  README.md  interlib.pyi  pyproject.toml
.github/workflows/: CI.yml  matlab-release.yml
docs/: COMMANDS.md
docs/benchmarks/: chebyshev_bench.py  cubicspline_bench.py  hermite_bench.py  lagrange_bench.py  leastsquares_bench.py  linear_bench.py  newton_bench.py  quad_bench.py  rbf_bench.py
docs/case_studies/: function_approx.py  signal_rec.py
docs/evidence/: SAFE_CORE_PERF.md  VALIDATION_EVIDENCE.md
docs/tutorial/: guide.md
interlib/: __init__.py  interlib.pyi
matlab/: MATLAB_DOCKER.md  README.md
matlab/+interlib/: ChebyshevInterpolator.m  CubicSplineInterpolator.m  HermiteInterpolator.m  LagrangeInterpolator.m  LeastSquaresInterpolator.m  LinearInterpolator.m  NewtonInterpolator.m  QuadraticInterpolator.m  RBFInterpolator.m  install.m  verify_installation.m
matlab/examples/: plot_chebyshev_demo.m  plot_cubic_spline_demo.m  plot_hermite_demo.m  plot_lagrange_demo.m  plot_least_squares_demo.m  plot_linear_demo.m  plot_newton_demo.m  plot_quadratic_demo.m  plot_rbf_demo.m
matlab/headers/: interlib_cubic_spline.h  interlib_linear.h  interlib_native.h  interlib_newton.h  interlib_quadratic.h
matlab/scripts/: package_matlab_toolbox.m  package_matlab_toolbox.sh  run_matlab_cubic_spline_test.sh  run_matlab_hermite_test.sh  run_matlab_installation_test.sh  run_matlab_least_squares_test.sh  run_matlab_newton_test.sh  run_matlab_quadratic_test.sh  run_matlab_rbf_test.sh  stage_matlab_toolbox.sh
matlab/tests/: test_chebyshev.m  test_cubic_spline.m  test_hermite.m  test_installation.m  test_lagrange.m  test_least_squares.m  test_linear.m  test_newton.m  test_quadratic.m  test_rbf.m
python/benches/: _datasets.py  altbench.py  bench.py  core_focus_bench.py  real_data_bench.py  self_analysis_text.py  self_analysis_visual.py  visual_bench.py  visual_comparison_bench.py
python/benchmarks/: leastsquares_bench.py  visual_bench.py  visual_comparison_bench.py
python/interlib/: __init__.py
python/tests/: api_contract_test.py  chebyshev_test.py  cubicspline_test.py  lagrange_test.py  leastsquares_test.py  linear_test.py  rbf_test.py
scripts/: build_matlab_toolbox.sh  package_matlab_toolbox.sh  run_matlab_chebyshev_test.sh  run_matlab_cubic_spline_test.sh  run_matlab_hermite_test.sh  run_matlab_lagrange_test.sh  run_matlab_least_squares_test.sh  run_matlab_linear_test.sh  run_matlab_newton_test.sh  run_matlab_quadratic_test.sh  run_matlab_rbf_test.sh  run_matlab_test.sh  stage_matlab_toolbox.sh  start_matlab_container.sh
src/: chebyshev.rs  chebyshev_core.rs  core_error.rs  cubic_spline.rs  cubic_spline_core.rs  hermite.rs  hermite_core.rs  lagrange.rs  lagrange_core.rs  least_squares.rs  least_squares_core.rs  lib.rs  linear.rs  linear_core.rs  newton.rs  newton_core.rs  quadratic.rs  quadratic_core.rs  rbf.rs  rbf_core.rs
src/core/: chebyshev_core.rs  core_error.rs  core_trait.rs  cubic_spline_core.rs  hermite_core.rs  lagrange_core.rs  least_squares_core.rs  linear_core.rs  mod.rs  newton_core.rs  perf_harness.rs  quadratic_core.rs  rbf_core.rs
src/ffi/: chebyshev.rs  cubic_spline.rs  hermite.rs  lagrange.rs  least_squares.rs  linear.rs  mod.rs  newton.rs  quadratic.rs  rbf.rs
src/matlab/: chebyshev.rs  linear.rs  (+8 more)
tests/: _libtest.py  hermite_test.py  linear_test.py  newton_test.py  quadratic_test.py
(+138 files in other folders)
