[package]
name = "interlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "interlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2"}
pyo3-stub-gen = { version = "0.17.2"}
pyo3-stub-gen-derive = { version = "0.17.2"}

[features]
extension-module = ["pyo3/extension-module"]