[package]
name = "interlib"
version = "0.1.0"
edition = "2024"
description = "Rust-backed interpolation algorithms exposed to Python."
license = "MIT"
repository = "https://github.com/WrighterX/interlib"
readme = "README.md"
exclude = [
    ".github/**",
    "dist/**",
    "target/**",
    ".venv/**",
    "matlab/**",
    "scripts/**",
    "python/benches/**",
    "python/case_studies/**",
]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]
matlab = []

[lib]
name = "interlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
numpy = { version = "0.27.1", optional = true }

[profile.release]
lto = true
codegen-units = 1
